tests/snapshots/pager__help.snap
---
source: tests/pager.rs
expression: "screen_text(&term, 80, 24, \"help\")"
---
 1│  ┌─╭─ Keys ───────────────────────────────────────────────────────────────╮    │
 2│  │ │ Scrolling                                                            │    │
 3│  │ │  0-9                 count for the next command (5j, 50%, 120gg)     │    │
 4│  │ │  j ↓ ^E ^N           down a line                                     │    │
 5│  └─│  k ↑ ^Y ^P           up a line                                       │    │
 6│    │  Space PgDn ^F       down a page                                     │    │
 7│   K│  b PgUp ^B           up a page                                       │    │
 8│    │  d ^D                down half a page                                │    │
 9│  A │  u ^U                up half a page                                  │    │
10│  li│  gg g Home <         top (line N with a count)                       │t-  │
11│  la│  G End >             bottom (line N with a count)                    │    │
12│  an│  %                   N percent into the document                     │    │
13│  th│  zz                  centre the current match, link or middle line   │    │
14│    │  zt                  … to the top                                    │    │
15│  He│  zb                  … to the bottom                                 │    │
16│  ━━│                                                                      │──  │
17│    │ Jumping                                                              │    │
18│  ▎ │  ]                   next heading                                    │    │
19│    │  [                   previous heading                                │    │
20│  Fo│  }                   next heading of the same or a higher level      │    │
21│    │  {                   previous heading of the same or a higher level  │    │
22│  Fi│  t                   outline (type to filter)                        │    │
23│    ╰─ more: j, Space ─────────────────────────────────────────────────────╯    │
24│ text                                                               L 1/129 17% │
