tests/snapshots/pager__hints-narrowed.snap
---
source: tests/pager.rs
expression: "render_with(&screen, true)"
---
 1│   Guide                                                    │
  │  ##│
 2│                                                            │
 3│  Intro with a link and x² inline.                          │
 4│                                                            │
 5│                                                     rust   │
 6│   fn main() {}                                             │
 7│   let x = 1;                                               │
 8│                                                            │
 9│                                                            │
10│                          E = mc²                           │
11│                                                            │
12│  ╭───┬───╮                                                 │
13│  │ a │ b │                                                 │
14│  ├───┼───┤                                                 │
15│  │ 1 │ 2 │                                                 │
16│  ╰───┴───╯                                                 │
17│                                                            │
18│  • first item                                              │
19│  • second item                                             │
20│                                                            │
21│  a A quote over lines.                                     │
  │  #│
22│                                                            │
23│                         s alt text                         │
  │                         #│
24│                                                            │
25│  dext                                                      │
  │  #│
26│  ━━━━────────────────────────────────────────────────────  │
27│                                                            │
28│  fast paragraph.                                           │
  │  #│
29│                                                            │
30│ -- YANK --  ;                                  L 1/28 100% │
