tests/snapshots/pager__hints-select.snap
---
source: tests/pager.rs
expression: "render_with(&screen, true)"
---
 1│   auide                                                    │
  │  ##│
 2│                                                            │
 3│  sntro with a link and x² inline.                          │
  │  #│
 4│                                                            │
 5│   d                                                 rust   │
  │   #│
 6│   fn main() {}                                             │
 7│   let x = 1;                                               │
 8│                                                            │
 9│                                                            │
10│                          f = mc²                           │
  │                          #│
11│                                                            │
12│  g───┬───╮                                                 │
  │  #│
13│  │ a │ b │                                                 │
14│  ├───┼───┤                                                 │
15│  │ 1 │ 2 │                                                 │
16│  ╰───┴───╯                                                 │
17│                                                            │
18│  h first item                                              │
  │  #│
19│  j second item                                             │
  │  #│
20│                                                            │
21│  k A quote over lines.                                     │
  │  #│
22│                                                            │
23│                         l alt text                         │
  │                         #│
24│                                                            │
25│  ;axt                                                      │
  │  ##│
26│  ━━━━────────────────────────────────────────────────────  │
27│                                                            │
28│  ;sst paragraph.                                           │
  │  ##│
29│                                                            │
30│ -- SELECT --  type a label, Esc cancels        L 1/28 100% │
