tests/snapshots/pager__hints.snap
---
source: tests/pager.rs
expression: "render_with(&screen, true)"
---
 1│  One alpha, two seta, three damma.                                   │
  │      #          #           #│
 2│                                                                      │
 3│  B                                                                   │
 4│  ━─────────────────────────────────────────────────────────────────  │
 5│                                                                      │
 6│                                                                      │
 7│                                                                      │
 8│ -- LINKS --  type a label, Esc cancels                    L 1/4 100% │
