tests/snapshots/pager__local-b.snap
---
source: tests/pager.rs
expression: "screen_text(&term, 60, 10, \"b\")"
---
 1│                                                            │
 2│  filler                                                    │
 3│                                                            │
 4│  filler                                                    │
 5│                                                            │
 6│  Second                                                    │
 7│  ━━━━━━──────────────────────────────────────────────────  │
 8│                                                            │
 9│  B text.                                                   │
10│ b.md › Page B                                 L 38/46 100% │
